# game-jam

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: Build.yml
cmake/: README.md
cmake/config/: Arch.cmake  Compiler.cmake  OS.cmake
cmake/func/: AddTargetSource.cmake
cmake/helpers/: CheckNimbusRoot.cmake  OptionMessages.cmake
cmake/setup/: README.md
cmake/setup/editor/: CompileDefinitions.cmake  CompileOptions.cmake  CompilerOptions.cmake
cmake/setup/engine/: CompileDefinitions.cmake  CompileOptions.cmake  CompilerOptions.cmake
cmake/setup/game/: CompileDefinitions.cmake  CompileOptions.cmake  CompilerOptions.cmake
cmake/setup/launcher/: CompileDefinitions.cmake  CompileOptions.cmake  CompilerOptions.cmake
cmake/setup/project/: DefineRootDirectories.cmake  UserOptions.cmake
dependencies/: CMakeLists.txt
editor/: CMakeLists.txt
editor/include/editor/: delete_me.hpp
editor/src/: CMakeLists.txt  delete_me.cpp  main.cpp
engine/: CMakeLists.txt
engine/include/nimbus/: CMakeLists.txt
engine/include/nimbus/assert/: CMakeLists.txt  MsvcCompilerSuppression.hpp
engine/include/nimbus/core/: CMakeLists.txt  Event.hpp
engine/include/nimbus/core/common/: Arch.hpp  CMakeLists.txt  Compiler.hpp  CompilerTraits.hpp
engine/include/nimbus/core/config/: CompilerTraits.hpp  Platform.hpp
engine/include/nimbus/core/platform/win32/: CMakeLists.txt  Windows.hpp
engine/include/nimbus/io/: CMakeLists.txt  Logger.hpp  PathHelpers.hpp
engine/include/nimbus/ntl/: CMakeLists.txt  FixedString.hpp  MonoInstance.hpp
engine/include/nimbus/utils/: CMakeLists.txt  ClangCompilerSuppression.hpp  GccCompilerSuppression.hpp  Tracy.hpp
engine/src/io/: CMakeLists.txt  Logger.cpp  PathHelpers.cpp
game/: CMakeLists.txt
game/src/: CMakeLists.txt  delete_me.cpp
game/src/app/: CMakeLists.txt
launcher/: CMakeLists.txt
launcher/include/launcher/: CMakeLists.txt  delete_me.hpp
launcher/src/: CMakeLists.txt  main.cpp
launcher/src/app/: CMakeLists.txt  app.rc  doc.txt
